added contentes section
contents section contain the image tray

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Kishore S" />
     <title>Hotstark</title>
 
     <!-- title icon -->
@@ -71,7 +72,7 @@
               <img
                 class="home-icon"
                 src="assets/images/hotstar-logo.svg"
-                alt=""
+                alt="hotstark-logo"
               />
             </div>
 
@@ -158,7 +159,7 @@
                   <img
                     class="kids-icon"
                     src="assets/images/kids-icon.svg"
-                    alt=""
+                    alt="navigation-bar-kids-icon"
                   />
                 </div>
               </div>
@@ -218,7 +219,319 @@
     </section>
 
     <!-- Contents -->
-    <section id="contents"></section>
+    <section id="contents">
+      <!-- Latest and Trending -->
+      <div class="tray-wrapper">
+        <div class="tray-prev">
+          <span class="material-icons-outlined arrow"> navigate_before </span>
+        </div>
+        <div class="tray-next">
+          <span class="material-icons-outlined arrow"> navigate_next </span>
+        </div>
+        <div class="tray-title">
+          <h2>Latest & Trending</h2>
+        </div>
+        <div class="tray-container">
+          <div class="tray-box tray-box1">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/blackwidow.webp"
+              alt="black-widow-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/cruella.webp"
+              alt="cruella-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/cityofdreams.webp"
+              alt="city-of-dreams-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/luca.webp"
+              alt="luca-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/legendhanuman.webp"
+              alt="legend-of-hanuman-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/loki.webp"
+              alt="loki-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/theempire.webp"
+              alt="the-empire-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/collarbomb.webp"
+              alt="collar-bomb-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/bhuj.webp"
+              alt="bhuj-img"
+            />
+          </div>
+        </div>
+      </div>
+
+      <!-- Popular Shows -->
+      <div class="tray-wrapper">
+        <div class="tray-prev">
+          <span class="material-icons-outlined arrow"> navigate_before </span>
+        </div>
+        <div class="tray-next">
+          <span class="material-icons-outlined arrow"> navigate_next </span>
+        </div>
+        <div class="tray-title">
+          <h2>Popular Shows</h2>
+        </div>
+        <div class="tray-container">
+          <div class="tray-box tray-box1">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/loki.webp"
+              alt="loki-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/luca.webp"
+              alt="luca-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/legendhanuman.webp"
+              alt="legend-of-hanuman-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/blackwidow.webp"
+              alt="black-widow-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/collarbomb.webp"
+              alt="collar-bomb-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/cruella.webp"
+              alt="cruella-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/bhuj.webp"
+              alt="bhuj-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/cityofdreams.webp"
+              alt="city-of-dreams-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/theempire.webp"
+              alt="the-empire-img"
+            />
+          </div>
+        </div>
+      </div>
+
+      <!-- Movies Recommended For You -->
+      <div class="tray-wrapper">
+        <div class="tray-prev">
+          <span class="material-icons-outlined arrow"> navigate_before </span>
+        </div>
+        <div class="tray-next">
+          <span class="material-icons-outlined arrow"> navigate_next </span>
+        </div>
+        <div class="tray-title">
+          <h2>Movies Recommended For You</h2>
+        </div>
+        <div class="tray-container">
+          <div class="tray-box tray-box1">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/blackwidow.webp"
+              alt="black-widow-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/cruella.webp"
+              alt="cruella-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/cityofdreams.webp"
+              alt="city-of-dreams-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/luca.webp"
+              alt="luca-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/legendhanuman.webp"
+              alt="legend-of-hanuman-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/loki.webp"
+              alt="loki-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/theempire.webp"
+              alt="the-empire-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/collarbomb.webp"
+              alt="collar-bomb-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/bhuj.webp"
+              alt="bhuj-img"
+            />
+          </div>
+        </div>
+      </div>
+
+      <!-- Shows Recommended For You -->
+      <div class="tray-wrapper">
+        <div class="tray-prev">
+          <span class="material-icons-outlined arrow"> navigate_before </span>
+        </div>
+        <div class="tray-next">
+          <span class="material-icons-outlined arrow"> navigate_next </span>
+        </div>
+        <div class="tray-title">
+          <h2>Shows Recommended For You</h2>
+        </div>
+        <div class="tray-container">
+          <div class="tray-box tray-box1">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/loki.webp"
+              alt="loki-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/luca.webp"
+              alt="luca-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/legendhanuman.webp"
+              alt="legend-of-hanuman-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/blackwidow.webp"
+              alt="black-widow-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/collarbomb.webp"
+              alt="collar-bomb-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/cruella.webp"
+              alt="cruella-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/bhuj.webp"
+              alt="bhuj-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/cityofdreams.webp"
+              alt="city-of-dreams-img"
+            />
+          </div>
+          <div class="tray-box">
+            <img
+              class="tray-image"
+              src="assets/images/tray-image/theempire.webp"
+              alt="the-empire-img"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Footer -->
     <section id="footer">
